changes to my about me section

--- a/index.html
+++ b/index.html
@@ -25,9 +25,12 @@
     <section id="about" class="about-me">
       <h2>About Me</h2>
       <p>
-        I am a self-taught aspiring front-end developer focusing on HTML, CSS,
-        and JavaScript. I enjoy building clean, responsive interfaces and
-        learning modern web development best practices.
+        I am a motivated aspiring front-end developer currently self-teaching
+        HTML, CSS, and JavaScript around my current role. I enjoy building clean
+        and responsive websites, turning ideas into functional web experiences.
+        I am eager to grow in a junior developer position where I can contribute
+        practical skills, learn from experienced developers, and continue
+        expanding my knowledge of modern web technologies.
       </p>
     </section>
     <!-- ============ SKILLS ========== -->
