Changes to first project card

--- a/index.html
+++ b/index.html
@@ -48,10 +48,19 @@
     <section id="projects" class="projects">
       <h2>Projects</h2>
       <article class="project">
-        <h3>Portfolio Website</h3>
-        <p>A personal portfolio website showcasing my projects and skills.</p>
+        <h3>Responsive Buisness Landing Page</h3>
+        <p>
+          A fully responsive one-page website designed for a fictional local
+          business, built to demonstrate clean layout, accessibility, and
+          mobile-first design.
+        </p>
         <!-- TODO: add tools used -->
-        <p><strong>Tools Used:</strong> HTML, CSS, JavaScript</p>
+        <p><strong>Tools Used:</strong> HTML5, CSS3 (flexbox)</p>
+        <ul>
+          <li>Mobile-first responsive layout</li>
+          <li>Semantic HTML5 structure for accessibility</li>
+          <li>Reusable CSS classes for consistent styling</li>
+        </ul>
         <!-- TODO: links -->
         <!-- <a href="#">Live Demo</a> | <a href="#">GitHub Repo</a> -->
         <!-- <a href="#">Source Code</a> -->
