polishing of the article

--- a/index.html
+++ b/index.html
@@ -54,17 +54,17 @@
           business, built to demonstrate clean layout, accessibility, and
           mobile-first design.
         </p>
-        <!-- TODO: add tools used -->
         <p><strong>Tools Used:</strong> HTML5, CSS3 (flexbox)</p>
         <ul>
           <li>Mobile-first responsive layout</li>
           <li>Semantic HTML5 structure for accessibility</li>
           <li>Reusable CSS classes for consistent styling</li>
         </ul>
-        <!-- TODO: links -->
-        <!-- <a href="#">Live Demo</a> | <a href="#">GitHub Repo</a> -->
-        <!-- <a href="#">Source Code</a> -->
+        <!-- replace # with actual links when ready -->
+        <a href="#">Live Demo</a>
+        <a href="#">Source Code</a>
       </article>
+      <!-- PROJECT CARD END -->
       <article class="project">
         <h3>Karaoke Request Form</h3>
         <p>
