styling of project cards

--- a/projects.html
+++ b/projects.html
@@ -37,15 +37,15 @@
             <p><strong>Technologies Used:</strong> HTML5, CSS3</p>
             <a
               href="https://gsjones1994-sudo.github.io/portfolio-website/index.html"
-              class="btn"
+              class="btn" target="_blank" rel="noopener"
               >View Project</a
             >
           </li>
           <li class="project-card">
-            <h2>Project 2</h2>
-            <p>Cming soon</p>
-            <p><strong>Technologies Used:</strong> HTML5, CSS3 (Grid)</p>
-            <a href="" class="btn">View Project</a>
+            <h2>Project 2 (Coming Soon)</h2>
+            <p>This project is currently in development and will showcase advanced CSS Grid techniques.</p>
+            <p><strong>Technologies Used:</strong> HTML5, CSS3 Grid</p>
+            <a href="#" class="btn">View Project</a>
           </li>
         </ul>
       </section>
