--- a/about.html
+++ b/about.html
@@ -18,6 +18,7 @@
         <a href="index.html" class="nav__logo">Gareth Jones</a>
         <ul class="nav__list">
           <li><a href="index.html">Home</a></li>
+          <li><a href="about.html" aria-current="page">About</a></li>
           <li><a href="projects.html">Projects</a></li>
         </ul>
       </nav>
