--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       <nav class="nav" aria-label="Primary Navigation">
         <a href="index.html" class="nav__logo">Gareth Jones</a>
         <ul class="nav__list">
+          <li><a href="index.html" aria-current="page">Home</a></li>
           <li><a href="about.html">About Me</a></li>
           <li><a href="projects.html">Projects</a></li>
         </ul>
