changes to accesibility

--- a/projects.html
+++ b/projects.html
@@ -19,6 +19,7 @@
         <ul class="nav__list">
           <li><a href="index.html">Home</a></li>
           <li><a href="about.html">About</a></li>
+          <li><a href="projects.html" aria-current="page">Projects</a></li>
         </ul>
       </nav>
     </header>
@@ -37,13 +38,18 @@
             <p><strong>Technologies Used:</strong> HTML5, CSS3</p>
             <a
               href="https://gsjones1994-sudo.github.io/portfolio-website/index.html"
-              class="btn" target="_blank" rel="noopener"
+              class="btn"
+              target="_blank"
+              rel="noopener"
               >View Project</a
             >
           </li>
           <li class="project-card">
             <h2>Project 2 (Coming Soon)</h2>
-            <p>This project is currently in development and will showcase advanced CSS Grid techniques.</p>
+            <p>
+              This project is currently in development and will showcase
+              advanced CSS Grid techniques.
+            </p>
             <p><strong>Technologies Used:</strong> HTML5, CSS3 Grid</p>
             <a href="#" class="btn">View Project</a>
           </li>
