--- a/projects.html
+++ b/projects.html
@@ -28,32 +28,30 @@
       <section class="projects">
         <h1>Projects</h1>
 
-        <ul class="projects__list">
-          <li class="project-card">
-            <h2>Responsive Portfolio Website</h2>
-            <p>
-              A personal portfolio website built with HTML and CSS, featuring a
-              responsive design that adapts to various screen sizes.
-            </p>
-            <p><strong>Technologies Used:</strong> HTML5, CSS3</p>
-            <a
-              href="https://gsjones1994-sudo.github.io/portfolio-website/index.html"
-              class="btn"
-              target="_blank"
-              rel="noopener"
-              >View Project</a
-            >
-          </li>
-          <li class="project-card">
-            <h2>Project 2 (Coming Soon)</h2>
-            <p>
-              This project is currently in development and will showcase
-              advanced CSS Grid techniques.
-            </p>
-            <p><strong>Technologies Used:</strong> HTML5, CSS3 Grid</p>
-            <a href="#" class="btn">View Project</a>
-          </li>
-        </ul>
+        <article class="project-card">
+          <h2>Responsive Portfolio Website</h2>
+          <p>
+            A personal portfolio website built with HTML and CSS, featuring a
+            responsive design that adapts to various screen sizes.
+          </p>
+          <p><strong>Technologies Used:</strong> HTML5, CSS3</p>
+          <a
+            href="https://gsjones1994-sudo.github.io/portfolio-website/index.html"
+            class="btn"
+            target="_blank"
+            rel="noopener"
+            >View Project</a
+          >
+        </article>
+        <article class="project-card">
+          <h2>Project 2 (Coming Soon)</h2>
+          <p>
+            This project is currently in development and will showcase advanced
+            CSS Grid techniques.
+          </p>
+          <p><strong>Technologies Used:</strong> HTML5, CSS3 Grid</p>
+          <a href="#" class="btn">View Project</a>
+        </article>
       </section>
     </main>
 
