--- a/index.html
+++ b/index.html
@@ -3,12 +3,22 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Gareth Jones is a junior front-end developer specializing in building clean, responsive websites using HTML and CSS."
+    />
+    <meta name="author" content="Gareth Jones" />
+    <meta
+      name="keywords"
+      content="Gareth Jones, junior web developer, front-end developer, HTML, CSS, responsive design"
+    />
     <title>Gareth Jones | Junior Web Developer</title>
     <link rel="stylesheet" href="css/reset.css" />
     <link rel="stylesheet" href="css/variables.css" />
     <link rel="stylesheet" href="css/base.css" />
     <link rel="stylesheet" href="css/layout.css" />
     <link rel="stylesheet" href="css/components.css" />
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" />
   </head>
   <body>
     <header class="site-header">
