--- a/about.html
+++ b/about.html
@@ -3,6 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Learn more about Gareth Jones, a junior front-end developer specializing in building clean, accessible, and responsive websites using HTML and CSS."
+    />
+    <meta name="author" content="Gareth Jones" />
+    <meta
+      name="keywords"
+      content="Gareth Jones, about, junior web developer, front-end developer, HTML, CSS, skills"
+    />
+
     <title>About | Gareth Jones</title>
 
     <link rel="stylesheet" href="css/reset.css" />
@@ -10,6 +20,7 @@
     <link rel="stylesheet" href="css/base.css" />
     <link rel="stylesheet" href="css/layout.css" />
     <link rel="stylesheet" href="css/components.css" />
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" />
   </head>
 
   <body>
