--- a/projects.html
+++ b/projects.html
@@ -3,6 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="A showcase of projects by Gareth Jones, including a responsive portfolio website built with HTML and CSS."
+    />
+    <meta name="author" content="Gareth Jones" />
+    <meta
+      name="keywords"
+      content="Gareth Jones, portfolio, projects, web development, HTML, CSS"
+    />
     <title>Projects | Gareth Jones</title>
 
     <link rel="stylesheet" href="css/reset.css" />
@@ -10,6 +19,7 @@
     <link rel="stylesheet" href="css/base.css" />
     <link rel="stylesheet" href="css/layout.css" />
     <link rel="stylesheet" href="css/components.css" />
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" />
   </head>
 
   <body>
