changes to icons

--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
     <link rel="stylesheet" href="css/base.css" />
     <link rel="stylesheet" href="css/layout.css" />
     <link rel="stylesheet" href="css/components.css" />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="assets/icons/favicon-16x16.png"
+    />
     <link rel="icon" type="image/png" sizes="32x32" href="assets/icons/" />
   </head>
   <body>
