--- a/projects.html
+++ b/projects.html
@@ -22,6 +22,12 @@
     <link
       rel="icon"
       type="image/png"
+      sizes="16x16"
+      href="assets/icons/favicon-16x16.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
       sizes="32x32"
       href="assets/icons/favicon-32x32.png"
     />
