--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
           <li><a href="index.html" aria-current="page">Home</a></li>
           <li><a href="about.html">About Me</a></li>
           <li><a href="projects.html">Projects</a></li>
+          <li><a href="contact.html">Contact</a></li>
         </ul>
       </nav>
     </header>
