adding link to GitHub

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <main>
       <section class="hero">
         <div class="hero__content">
-          <h1>Junior Front-End Developer</h1>
+          <h1>Junior Web Developer</h1>
           <p>
             I build clean, responsive websites using HTML and CSS, with a strong
             focus on structure and accessibility. I am currently expanding my
@@ -49,6 +49,11 @@
             GitHub.
           </p>
           <a href="projects.html" class="btn">View Projects</a>
+          <a
+            href="https://github.com/gsjones1994-sudo"
+            class="btn btn--secondary"
+            >Visit My GitHub</a
+          >
         </div>
       </section>
     </main>
