adding screen shot of project

--- a/projects.html
+++ b/projects.html
@@ -51,6 +51,10 @@
         <h1>Projects</h1>
 
         <article class="project-card">
+          <img
+            src="assets/images/Portfolio_page_screenshot.png"
+            alt="portfolio website screenshot"
+          />
           <h2>Responsive Portfolio Website</h2>
           <p>
             A personal portfolio website built with HTML and CSS, featuring a
