changes to about section

--- a/about.html
+++ b/about.html
@@ -47,8 +47,10 @@
         <h1>About Me</h1>
 
         <p>
-          I am a junior front-end developer focused on building clean,
-          accessible, and responsive websites using HTML and CSS.
+          I’m a career changer transitioning into web development after working
+          in operational and customer-facing roles. I enjoy solving problems,
+          learning through building projects, and writing clean, maintainable
+          code.
         </p>
 
         <p>
