updating contact information

--- a/contact.html
+++ b/contact.html
@@ -47,24 +47,11 @@
       <section class="contact">
         <div class="contact__content">
           <h1>Contact Me</h1>
-          <p>
-            I'm always open to discussing new projects, creative ideas, or
-            opportunities to be part of your visions. Feel free to reach out to
-            me using the form below or via my email.
-          </p>
-          <form class="contact-form" action="#" method="post">
-            <label for="name">Name:</label>
-            <input type="text" id="name" name="name" required />
+          <p>Email: <a href="mailto:garethjones94@icloud.com">garethjones94@icloud.com</a></p>
+          <p>GitHub: <a href="https://github.com/gsjones1994-sudo" target="_blank" rel="noopener">github.com/gsjones1994-sudo</a></p>
+          <p>LinkedIn: <a href="https://www.linkedin.com/in/garethjonesdec94/" target="_blank" rel="noopener">linkedin.com/in/garethjonesdec94/</a></p>
+          <p><a href="assets/images/Gareth_Jones_Junior_Web_Developer_CV_v2.pdf" target="_blank" rel="noopener">CV (PDF)</a></p>
 
-            <label for="email">Email:</label>
-            <input type="email" id="email" name="email" required />
-
-            <label for="message">Message:</label>
-            <textarea id="message" name="message" rows="5" required></textarea>
-
-            <button type="submit" class="btn">Send Message</button>
-          </form>
-        </div>
       </section>
     </main>
     <footer class="site-footer">
