Improve projects page with detailed project descriptions

--- a/projects.html
+++ b/projects.html
@@ -49,25 +49,43 @@
     <main>
       <section class="projects">
         <h1>Projects</h1>
+        <p>
+          A selection of projects built to strengthen my skills in HTML and CSS,
+          with a focus on clean structure,responsive design and problem solving.
+        </p>
 
         <article class="project-card">
-          <img
+          <!---- <img
             src="assets/images/Portfolio_page_screenshot.png"
             alt="portfolio website screenshot"
-          />
+          /> !-->
           <h2>Responsive Portfolio Website</h2>
-          <p>
-            A personal portfolio website built with HTML and CSS, featuring a
-            responsive design that adapts to various screen sizes.
-          </p>
+          <ul class="project-details">
+            <li>Built using semantic HTML and a mobile-first approach</li>
+            <li>
+              Features responsive design with CSS Flexbox and Media Queries
+            </li>
+            <li>Includes accessible navigation and layout</li>
+            <li>Organises CSS with a modular approach</li>
+          </ul>
           <p><strong>Technologies Used:</strong> HTML5, CSS3</p>
-          <a
-            href="https://gsjones1994-sudo.github.io/portfolio-website/index.html"
-            class="btn"
-            target="_blank"
-            rel="noopener"
-            >View Project</a
-          >
+          <div class="project-links">
+            <a
+              href="https://gsjones1994-sudo.github.io/portfolio-website/index.html"
+              class="btn"
+              target="_blank"
+              rel="noopener"
+              >Live Demo</a
+            >
+            <a
+              href="https://github.com/gsjones1994-sudo/portfolio-website"
+              class="btn btn--secondary"
+              target="_blank"
+              rel="noopener"
+            >
+              GitHub
+            </a>
+          </div>
         </article>
         <article class="project-card">
           <h2>Project 2 (Coming Soon)</h2>
