adding screen shot of prjoect page

--- a/projects.html
+++ b/projects.html
@@ -55,10 +55,10 @@
         </p>
 
         <article class="project-card">
-          <!---- <img
+          <img
             src="assets/images/Portfolio_page_screenshot.png"
-            alt="portfolio website screenshot"
-          /> !-->
+            alt="screenshot of Gareth jones' portfolio website homepage"
+          />
           <h2>Responsive Portfolio Website</h2>
           <ul class="project-details">
             <li>Built using semantic HTML and a mobile-first approach</li>
