outline for new project

--- a/projects.html
+++ b/projects.html
@@ -87,13 +87,18 @@
             </a>
           </div>
         </article>
-        <article class="project-card">
-          <h2>Project 2 (Coming Soon)</h2>
+        <article class="project-card project-card--placeholder">
+          <h2>JavaScript Task Tracker (In Progress)</h2>
           <p>
-            This project is currently in development and will showcase advanced
-            CSS Grid techniques.
+            A JavaScript-based task tracker app to practice DOM manipulation and
+            event handling.
           </p>
-          <p><strong>Technologies Used:</strong> HTML5, CSS3 Grid</p>
+          <p><strong>Planned Features:</strong></p>
+          <ul class="project-details">
+            <li>Add, edit, and delete tasks</li>
+            <li>Mark tasks as complete/incomplete</li>
+            <li>Filter tasks by status</li>
+            <li>Persist data using localStorage</li>
           <a href="#" class="btn">View Project</a>
         </article>
       </section>
