--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Gareth Jones is a junior front-end developer specializing in building clean, responsive websites using HTML and CSS."
+      content="Home page of Gareth Jones, showcasing my skills in HTML, CSS, and responsive web design as a junior front-end developer."
     />
     <meta name="author" content="Gareth Jones" />
     <meta
