improvements to content

--- a/projects.html
+++ b/projects.html
@@ -51,7 +51,8 @@
         <h1>Projects</h1>
         <p>
           A selection of projects built to strengthen my skills in HTML and CSS,
-          with a focus on clean structure,responsive design and problem solving.
+          with a focus on clean structure, responsive design and problem
+          solving.
         </p>
 
         <article class="project-card">
