--- a/about.html
+++ b/about.html
@@ -26,7 +26,12 @@
       sizes="16x16"
       href="assets/icons/favicon-16x16.png"
     />
-    <link rel="icon" type="image/png" sizes="32x32" href="assets/icons/" />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="assets/icons/favicon-32x32.png"
+    />
   </head>
 
   <body>
