--- a/contact.html
+++ b/contact.html
@@ -47,11 +47,43 @@
       <section class="contact">
         <div class="contact__content">
           <h1>Contact Me</h1>
-          <p>Email: <a href="mailto:garethjones94@icloud.com">garethjones94@icloud.com</a></p>
-          <p>GitHub: <a href="https://github.com/gsjones1994-sudo" target="_blank" rel="noopener">github.com/gsjones1994-sudo</a></p>
-          <p>LinkedIn: <a href="https://www.linkedin.com/in/garethjonesdec94/" target="_blank" rel="noopener">linkedin.com/in/garethjonesdec94/</a></p>
-          <p><a href="assets/images/Gareth_Jones_Junior_Web_Developer_CV_v2.pdf" target="_blank" rel="noopener">CV (PDF)</a></p>
-
+          <address>
+            Feel free to reach out to me via email or connect with me on GitHub
+            and LinkedIn.
+            <p>
+              Email:
+              <a href="mailto:garethjones94@icloud.com"
+                >garethjones94@icloud.com</a
+              >
+            </p>
+            <p>
+              GitHub:
+              <a
+                href="https://github.com/gsjones1994-sudo"
+                target="_blank"
+                rel="noopener"
+                >github.com/gsjones1994-sudo</a
+              >
+            </p>
+            <p>
+              LinkedIn:
+              <a
+                href="https://www.linkedin.com/in/garethjonesdec94/"
+                target="_blank"
+                rel="noopener"
+                >linkedin.com/in/garethjonesdec94/</a
+              >
+            </p>
+            <p>
+              <a
+                href="assets/images/Gareth_Jones_Junior_Web_Developer_CV_v2.pdf"
+                target="_blank"
+                rel="noopener"
+                >CV (PDF)</a
+              >
+            </p>
+          </address>
+        </div>
       </section>
     </main>
     <footer class="site-footer">
