amending address section

--- a/contact.html
+++ b/contact.html
@@ -48,8 +48,10 @@
         <div class="contact__content">
           <h1>Contact Me</h1>
           <address>
-            Feel free to reach out to me via email or connect with me on GitHub
-            and LinkedIn.
+            <p>
+              Feel free to reach out to me via email or connect with me on
+              GitHub and LinkedIn.
+            </p>
             <p>
               Email:
               <a href="mailto:garethjones94@icloud.com"
