adjusting external links

--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
   <body>
     <header class="site-header">
       <nav class="nav" aria-label="Primary Navigation">
-        <a href="index.html" class="nav__logo">Gareth Jones</a>
+        <a href="index.html" class="nav__logo" target="_blank" rel="noopener"
+          >Gareth Jones</a
+        >
         <ul class="nav__list">
           <li><a href="index.html" aria-current="page">Home</a></li>
           <li><a href="about.html">About Me</a></li>
