fixing flex grid for project cards

--- a/projects.html
+++ b/projects.html
@@ -47,14 +47,12 @@
     </header>
 
     <main>
+      <h1>Projects</h1>
+      <p>
+        A selection of projects built to strengthen my skills in HTML and CSS,
+        with a focus on clean structure, responsive design and problem solving.
+      </p>
       <section class="projects">
-        <h1>Projects</h1>
-        <p>
-          A selection of projects built to strengthen my skills in HTML and CSS,
-          with a focus on clean structure, responsive design and problem
-          solving.
-        </p>
-
         <article class="project-card">
           <img
             src="assets/images/Portfolio_page_screenshot.png"
